# kde-google-drive-sync

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
assets/: org.kde.gdrivesync.desktop
crates/gds-cli/: Cargo.toml
crates/gds-cli/assets/: _gdrivesync  gdrivesync.1  gdrivesync.bash  gdrivesync.fish
crates/gds-cli/src/: cli.rs  config.rs  daemon_ctl.rs  dbus_client.rs  dbus_types.rs  lib.rs  main.rs  output.rs  run.rs
crates/gds-cli/tests/: cli_integration.rs
crates/gds-core/: Cargo.toml
crates/gds-core/migrations/: 001_create_accounts.sql  002_create_sync_folders.sql  003_create_file_states.sql  004_create_sync_errors.sql  005_oauth_app_credentials.sql
crates/gds-core/src/: lib.rs
crates/gds-core/src/api/: backoff.rs  client.rs  error.rs  mod.rs  types.rs  workspace.rs
crates/gds-core/src/auth/: flow.rs  keyring_store.rs  loopback.rs  mod.rs  oauth_client.rs  token_store.rs
crates/gds-core/src/db/: account.rs  file_state.rs  mod.rs  oauth_app_credentials.rs  sync_error.rs  sync_folder.rs
crates/gds-core/src/model/: account.rs  change_set.rs  config.rs  conflict.rs  drive_file.rs  error.rs  file_state.rs  mod.rs  sync_folder.rs  sync_state.rs
crates/gds-core/src/sync/: change.rs  diff.rs  executor.rs  fs.rs  mod.rs  path.rs  queue.rs  workspace_stub.rs
crates/gds-core/tests/: api_integration.rs  sync_integration.rs
crates/gds-daemon/: Cargo.toml
crates/gds-daemon/assets/: org.kde.GDriveSync.Daemon.xml
crates/gds-daemon/src/: lib.rs  main.rs
crates/gds-daemon/src/dbus/: mod.rs  service.rs  signals.rs  types.rs
crates/gds-daemon/src/scheduler/: mod.rs  rate_limit.rs  retry.rs
crates/gds-daemon/src/watcher/: ignore.rs  mod.rs
crates/gds-daemon/tests/: dbus_integration.rs  watcher_integration.rs
crates/gds-kde/: Cargo.toml
crates/gds-kde/src/: dbus.rs  main.rs  notifications.rs  prefs.rs  state.rs  tray.rs
crates/gds-kde/tests/: tray_menu.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GOOGLE_API.md  KDE_INTEGRATION.md  SECURITY.md
kio-worker/: CMakeLists.txt
kio-worker/src/: gdrivekio.cpp
packaging/systemd/: gds-daemon.service
