[package]
name = "gds-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure sync logic and domain model for Google Drive Sync (no OS deps)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
