[package]
name = "gds-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure sync logic and domain model for Google Drive Sync (no OS deps)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "net", "time", "io-util"] }
oauth2 = { version = "5", features = ["reqwest"] }
# Keep 0.12: oauth2 v5 implements AsyncHttpClient only for reqwest 0.12's Client.
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
urlencoding = "2"
tracing = "0.1"
mime_guess = "2.0"
uuid = { version = "1", features = ["v4"] }
md5 = "0.7"
async-trait = "0.1"

[features]
default = []
# Enable for daemon: TokenStore implementation using keyring (libsecret on Linux).
keyring = ["dep:keyring"]

[dependencies.keyring]
version = "3"
optional = true

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros", "net"] }
wiremock = "0.6"
tempfile = "3"
