[package]
name = "gds-kde"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "KDE UI: system tray and notifications"

[[bin]]
name = "gds-kde"
path = "src/main.rs"

[dependencies]
gds-core = { path = "../gds-core" }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ksni = { version = "0.3", features = ["tokio"] }
zbus = { version = "5", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
toml = "0.9"
chrono = "0.4"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
